--- a/client/layouts/root.html
+++ b/client/layouts/root.html
@@ -1,6 +1,18 @@
 <template name="rootLayout">
-    <div class="rootLayout">
+    <div id="root">
         {{> menu}}
+        <header>
+            <button class="menuBtn">
+                <svg width="32px" height="32px" viewbox="0 0 32 32">
+                    <rect class="background" x="0" y="0" width="32" height="32"></rect>
+                    <g class="lines">
+                        <line x1="6" x2="26" y1="10" y2="10"></line>
+                        <line x1="6" x2="26" y1="16" y2="16"></line>
+                        <line x1="6" x2="26" y1="22" y2="22"></line>
+                    </g>
+                </svg>
+            </button>
+        </header>
         {{> yield}}
     </div>
 </template>
