--- a/client/menu/menu.less
+++ b/client/menu/menu.less
@@ -1,11 +1,12 @@
 @import (reference) '../lib/variables.import.less';
 
 nav#menu {
-  display: block;
+  display: none;
   position: fixed;
   bottom: 0;
   top: 0;
   left: 0;
   width: 300px;
   background: @gray10;
+  z-index: 100;
 }
