--- a/client/management/shops/edit/edit.less
+++ b/client/management/shops/edit/edit.less
@@ -4,16 +4,18 @@
     height: 414px;
     width: 100%;
 
-    #coverCanvas {
+    #coverImage {
       position: absolute;
+      display: block;
       top: 0;
       left: 0;
       height: 100%;
       width: 100%;
     }
     
-    #logoCanvas {
+    #logoImage {
       position: absolute;
+      display: block;
       top: 33%;
       left: 33%;
       height: 33%;
