--- a/client/layouts/root.less
+++ b/client/layouts/root.less
@@ -24,12 +24,9 @@
       svg {
         width: 32px;
         height: 32px;
+        background: fadeout(white, 50%);
 
-        .background {
-          fill: fadeout(white, 75%);
-        }
-
-        .lines {
+        line {
           stroke: @color-main;
           fill: none;
           stroke-width: 2;
