--- a/client/management/shops/edit/edit.less
+++ b/client/management/shops/edit/edit.less
@@ -1,8 +1,125 @@
+@import (reference) '../../../lib/variables.import.less';
+
 #shopEdit {
   .imagesBlock {
     position: relative;
     height: 414px;
     width: 100%;
+
+    .uploadBtn {
+      background: none;
+      padding: 0;
+      margin: 0;
+      border: none;
+      white-space: nowrap;
+      cursor: pointer;
+      height: 32px;
+      width: 32px;
+      outline: none;
+      z-index: 10;
+      background: fadeout(white, 50%);
+
+      position: absolute;
+      right: 0;
+
+      svg {
+        height: 100%;
+        width: 100%;
+        line, polyline {
+          stroke: @color-main;
+          fill: none;
+          stroke-width: 2;
+        }
+      }
+    }
+
+    .uploadMenu {
+      display: none;
+      margin: 0;
+      padding: 0;
+      position: absolute;
+      right: 0;
+      top: 40px;
+      width: 32px;
+      z-index: 10;
+
+      ul.menu {
+        display: block;
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        position: absolute;
+        top: 0;
+
+        li {
+          display: block;
+          height: 32px;
+          width: 32px;
+          margin: 0;
+          padding: 0;
+
+          button {
+            display: block;
+            height: 32px;
+            width: 32px;
+            background: none;
+            border: none;
+            margin: 0;
+            padding: 0;
+            cursor: pointer;
+            outline: none;
+            background: fadeout(white, 50%);
+            position: relative;
+            overflow: hidden;
+
+            &.uploadLogoBtn {
+              svg {
+                circle {
+                  fill: none;
+                  stroke-width: 2;
+                  stroke: @color-main;
+                }
+              }
+            }
+
+            &.uploadCoverBtn {
+              svg {
+                rect {
+                  fill: none;
+                  stroke-width: 2;
+                  stroke: @color-main;
+                }
+              }
+            }
+
+            input[type=file] {
+              position: absolute;
+              top: 0;
+              right: 0;
+              min-width: 100%;
+              min-height: 100%;
+              font-size: 100px;
+              text-align: right;
+              filter: alpha(opacity=0);
+              opacity: 0;
+              outline: none;
+              background: white;
+              cursor: inherit;
+              display: block;
+            }
+          }
+        }
+      }
+
+      svg.tip {
+        display: block;
+        position: absolute;
+        top: -8px;
+        polygon {
+          fill: fadeout(white, 50%);
+        }
+      }
+    }
 
     #coverImage {
       position: absolute;
