--- a/client/lib/variables.import.less
+++ b/client/lib/variables.import.less
@@ -16,6 +16,8 @@
 @color-good:      #DA4A3A;
 @color-bad:       #39B473;
 
+@header-buttons-size: 48px;
+
 @body-background:         @gray-light;
 @font-family:             'Roboto', sans-serif;
 @text-color:              @gray60;
