--- a/client/management/shops/edit/edit.less
+++ b/client/management/shops/edit/edit.less
@@ -13,11 +13,11 @@
       border: none;
       white-space: nowrap;
       cursor: pointer;
-      height: 32px;
-      width: 32px;
+      height: @header-buttons-size;
+      width: @header-buttons-size;
       outline: none;
       z-index: 10;
-      background: fadeout(white, 50%);
+      background: fadeout(white, 75%);
 
       position: absolute;
       right: 0;
@@ -39,8 +39,8 @@
       padding: 0;
       position: absolute;
       right: 0;
-      top: 40px;
-      width: 32px;
+      top: @header-buttons-size + 8px;
+      width: @header-buttons-size;
       z-index: 10;
 
       ul.menu {
@@ -53,27 +53,29 @@
 
         li {
           display: block;
-          height: 32px;
-          width: 32px;
+          height: @header-buttons-size;
+          width: @header-buttons-size;
           margin: 0;
           padding: 0;
 
           button {
             display: block;
-            height: 32px;
-            width: 32px;
+            height: @header-buttons-size;
+            width: @header-buttons-size;
             background: none;
             border: none;
             margin: 0;
             padding: 0;
             cursor: pointer;
             outline: none;
-            background: fadeout(white, 50%);
+            background: fadeout(white, 75%);
             position: relative;
             overflow: hidden;
 
             &.uploadLogoBtn {
               svg {
+                height: @header-buttons-size;
+                width: @header-buttons-size;
                 circle {
                   fill: none;
                   stroke-width: 2;
@@ -84,6 +86,8 @@
 
             &.uploadCoverBtn {
               svg {
+                height: @header-buttons-size;
+                width: @header-buttons-size;
                 rect {
                   fill: none;
                   stroke-width: 2;
@@ -116,7 +120,7 @@
         position: absolute;
         top: -8px;
         polygon {
-          fill: fadeout(white, 50%);
+          fill: fadeout(white, 75%);
         }
       }
     }
