--- a/client/management/shops/edit/edit.less
+++ b/client/management/shops/edit/edit.less
@@ -15,6 +15,13 @@
       width: 100%;
     }
 
+    img.logo {
+      top: 100% / 3;
+      left: 100% / 3;
+      height: 100% / 3;
+      width: 100% / 3;
+    }
+
     canvas#canvas {
       display: block;
     }
