--- a/client/management/shops/edit/images.less
+++ b/client/management/shops/edit/images.less
@@ -25,6 +25,11 @@
         top: 0;
         right: 0;
         z-index: 10;
+
+        button {
+          display: block;
+          float: left;
+        }
       }
     }
 
