--- a/client/menu/menu.less
+++ b/client/menu/menu.less
@@ -9,4 +9,25 @@ nav#menu {
   width: 300px;
   background: @gray10;
   z-index: 100;
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    li {
+      margin: 0;
+      padding: 0;
+      a {
+        margin: 0;
+        padding: 8px 16px;
+        display: block;
+        height: 32px;
+        line-height: 32px;
+        font-size: 16px;
+        text-decoration: none;
+        color: #ffffff;
+        background: @color-main;
+      }
+    }
+  }
 }
