--- a/client/lib/headings.import.less
+++ b/client/lib/headings.import.less
@@ -1,9 +1,21 @@
 @import (reference) 'variables.import.less';
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: @headings-font-weight;
   line-height: @headings-line-height;
   color: @headings-color;
+  text-transform: uppercase;
+}
+
+h1, h2 {
+  font-weight: 200;
+}
+
+h3, h4 {
+  font-weight: 300;
+}
+
+h5, h6 {
+  font-weight: 400;
 }
 
 h1 {
