--- a/client/menu/menu.less
+++ b/client/menu/menu.less
@@ -9,6 +9,8 @@ nav#menu {
   width: 300px;
   background: @gray10;
   z-index: 100;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   ul {
     list-style: none;
