--- a/client/main.less
+++ b/client/main.less
@@ -28,3 +28,11 @@ a {
     color: @link-hover-color;
   }
 }
+
+input, textarea {
+  background: none;
+  border: 1px solid darken(@color-main, 10%);
+  height: 16px;
+  padding: 8px;
+  line-height: 16px;
+}
