--- a/client/management/shops/edit/edit.less
+++ b/client/management/shops/edit/edit.less
@@ -1,6 +1,12 @@
 @import (reference) '../../../lib/variables.import.less';
 
 #shopEdit {
+
+  .menuBtn {
+    position: absolute;
+    z-index: 10;
+  }
+
   .imagesBlock {
 
     img.cover, img.logo, canvas#canvas {
