--- a/client/lib/variables.import.less
+++ b/client/lib/variables.import.less
@@ -12,9 +12,13 @@
 
 @gray-light:      #EEE;
 
-@color-main:      #3DA3A7;
-@color-good:      #DA4A3A;
-@color-bad:       #39B473;
+@color-main:            #3DA3A7;
+@color-secondary:       #18585A;
+@color-gray-main:       @gray60;
+@color-gray-secondary:  @gray40;
+
+@color-good:      #39B473;
+@color-bad:       #DA4A3A;
 
 @header-buttons-size: 48px;
 
