--- a/client/lib/bootstrap/less/variables.import.less
+++ b/client/lib/bootstrap/less/variables.import.less
@@ -14,11 +14,11 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         darken(#428bca, 6.5%);
-@brand-success:         #5cb85c;
+@brand-primary:         #3DA3A7;
+@brand-success:         #DA4A3A;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+@brand-danger:          #39B473;
 
 
 //== Scaffolding
@@ -26,7 +26,7 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #fff;
+@body-bg:               @gray-lighter;
 //** Global text color on `<body>`.
 @text-color:            @gray-dark;
 
@@ -68,7 +68,7 @@
 @headings-font-family:    inherit;
 @headings-font-weight:    500;
 @headings-line-height:    1.1;
-@headings-color:          inherit;
+@headings-color:          @brand-primary;
 
 
 //== Iconography
