--- a/client/lib/bootstrap/less/forms.import.less
+++ b/client/lib/bootstrap/less/forms.import.less
@@ -22,18 +22,19 @@ legend {
   width: 100%;
   padding: 0;
   margin-bottom: @line-height-computed;
-  font-size: (@font-size-base * 1.5);
+  font-size: @font-size-large;
   line-height: inherit;
   color: @legend-color;
   border: 0;
-  border-bottom: 1px solid @legend-border-color;
+  border-bottom: 1px dotted @legend-border-color;
+  text-transform: uppercase;
 }
 
 label {
   display: inline-block;
   max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
   margin-bottom: 5px;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 
@@ -390,7 +391,7 @@ input[type="checkbox"] {
   display: block; // account for any element using help-block
   margin-top: 5px;
   margin-bottom: 10px;
-  color: lighten(@text-color, 25%); // lighten the text some for contrast
+  color: @gray-light; // lighten the text some for contrast
 }
 
 
