--- a/client/main.less
+++ b/client/main.less
@@ -1,3 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
 @import (reference) 'lib/variables.import.less';
 @import 'lib/buttons.import.less';
+
+
+form.form-horizontal {
+  overflow-x: hidden;
+}
