--- a/client/layouts/root.less
+++ b/client/layouts/root.less
@@ -1,13 +1,16 @@
 @import (reference) '../lib/variables.import.less';
 
-#root {
+#rootLayout {
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: auto;
+
+  button.menuBtn {
+    position: absolute;
+    z-index: 50;
+  }
+
   > section {
-    position: fixed;
-    display: block;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    overflow: auto;
+
   }
 }
