--- a/client/lib/variables.import.less
+++ b/client/lib/variables.import.less
@@ -1,3 +1,5 @@
+@import (reference) 'bootstrap/less/variables.import.less';
+
 @white:           #FFF;
 @gray10:          darken(@white, 10%); //#E6E6E6
 @gray20:          darken(@white, 20%); //#CCCCCC
