--- a/client/lib/bootstrap/less/forms.import.less
+++ b/client/lib/bootstrap/less/forms.import.less
@@ -20,7 +20,7 @@ fieldset {
 legend {
   display: block;
   width: 100%;
-  padding: 0;
+  padding: 0 0 4px 0;
   margin-bottom: @line-height-computed;
   font-size: @font-size-large;
   line-height: inherit;
