--- a/client/management/shops/edit/products/products.less
+++ b/client/management/shops/edit/products/products.less
@@ -7,8 +7,7 @@
   padding: 0;
   display: inline-block;
   vertical-align: middle;
-  height: 24px;
-  width: 24px;
+  line-height: inherit;
 }
 
 .product-card {
