--- a/client/lib/bootstrap/less/forms.import.less
+++ b/client/lib/bootstrap/less/forms.import.less
@@ -20,13 +20,12 @@ fieldset {
 legend {
   display: block;
   width: 100%;
-  padding: 0 0 4px 0;
+  padding: 0;
   margin-bottom: @line-height-computed;
   font-size: @font-size-large;
   line-height: inherit;
   color: @legend-color;
   border: 0;
-  border-bottom: 1px dotted @legend-border-color;
   text-transform: uppercase;
 }
 
