--- a/client/lib/bootstrap/less/variables.import.less
+++ b/client/lib/bootstrap/less/variables.import.less
@@ -849,7 +849,7 @@
 //** Blockquote border color
 @blockquote-border-color:     @gray-lighter;
 //** Page header border color
-@page-header-border-color:    @gray-lighter;
+@page-header-border-color:    fade(darken(@brand-primary, 15%), 50%);
 //** Width of horizontal description list titles
 @dl-horizontal-offset:        @component-offset-horizontal;
 //** Horizontal line color.
