--- a/client/management/products/edit/edit.less
+++ b/client/management/products/edit/edit.less
@@ -1,8 +1,9 @@
 .management-products-edit {
   position: relative;
 
-  .backBtn {
+  .btn.btn-icon.backBtn {
     position: absolute;
     z-index: 10;
+    display: block;
   }
 }
