--- a/client/management/products/edit/images/images.less
+++ b/client/management/products/edit/images/images.less
@@ -5,5 +5,15 @@
     background: @color-main;
     width: 100%;
     height: 200px;
+    .context-buttons {
+      position: absolute;
+      z-index: 10;
+      right: 0;
+      top: 0;
+    }
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
