--- a/client/management/products/edit/images/images.less
+++ b/client/management/products/edit/images/images.less
@@ -22,6 +22,13 @@
       height: 100%;
       width: 100%;
       position: absolute;
+
+      nav.context-buttons {
+        button {
+          display: block;
+          float: left;
+        }
+      }
     }
 
     .viewState {
