--- a/client/lib/bootstrap/less/variables.import.less
+++ b/client/lib/bootstrap/less/variables.import.less
@@ -15,10 +15,10 @@
 @gray-lighter:           lighten(@gray-base, 93.5%); // #EEE
 
 @brand-primary:         #3DA3A7;
-@brand-success:         #DA4A3A;
+@brand-success:         #39B473;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
-@brand-danger:          #39B473;
+@brand-danger:          #DA4A3A;
 
 
 //== Scaffolding
