--- a/client/main.less
+++ b/client/main.less
@@ -6,3 +6,9 @@
 form.form-horizontal {
   overflow-x: hidden;
 }
+
+.page-header {
+  &.text-danger {
+    border-bottom-color: fade(darken(@brand-danger, 15%), 50%);
+  }
+}
