--- a/client/main.less
+++ b/client/main.less
@@ -12,3 +12,10 @@ form.form-horizontal {
     border-bottom-color: fade(darken(@brand-danger, 15%), 50%);
   }
 }
+
+.block {
+  margin: 0 0 @grid-gutter-width 0;
+  .page-header:first-child {
+
+  }
+}
