--- a/client/main.less
+++ b/client/main.less
@@ -14,7 +14,7 @@ form.form-horizontal {
 }
 
 .block {
-  margin: 0 0 @grid-gutter-width 0;
+  margin: 0 0 @grid-gutter-width / 2 0;
   .page-header:first-child {
 
   }
