--- a/client/marketplace/products/view/view.html
+++ b/client/marketplace/products/view/view.html
@@ -6,8 +6,7 @@
         {{ #with product }}
 
         {{> marketplaceProductsViewImages }}
-
-        {{ title }}
+        {{> marketplaceProductsViewDetails }}
 
         {{ /with }}
     </div>
