--- a/client/marketplace/products/view/other/other.html
+++ b/client/marketplace/products/view/other/other.html
@@ -16,31 +16,33 @@
                 </small>
             </h2>
 
-            {{ #each products }}
-                <div class="col-xs-6 col-sm-4">
-                    <a class="product-card" href="{{pathFor route='products.view' data=this }}">
-                        {{ #if image }}
-                            <img src="{{ image.url }}" />
-                        {{ /if }}
-                        <div class="info">
-                            <h3>
-                                {{ #if title }}
-                                    {{title}}
-                                {{ else }}
-                                    <i>Draft product</i>
-                                {{ /if }}
-                            </h3>
-                            <span class="price">
-                                {{ #if price }}
-                                    {{price}}
-                                {{ else }}
-                                    <i>No price specified</i>
-                                {{ /if }}
-                            </span>
-                        </div>
-                    </a>
-                </div>
-            {{ /each }}
+            <div class="row">
+                {{ #each products }}
+                    <div class="col-xs-6 col-sm-4">
+                        <a class="product-card" href="{{pathFor route='products.view' data=this }}">
+                            {{ #if image }}
+                                <img src="{{ image.url }}" />
+                            {{ /if }}
+                            <div class="info">
+                                <h3>
+                                    {{ #if title }}
+                                        {{title}}
+                                    {{ else }}
+                                        <i>Draft product</i>
+                                    {{ /if }}
+                                </h3>
+                                <span class="price">
+                                    {{ #if price }}
+                                        {{price}}
+                                    {{ else }}
+                                        <i>No price specified</i>
+                                    {{ /if }}
+                                </span>
+                            </div>
+                        </a>
+                    </div>
+                {{ /each }}
+            </div>
 
             {{ /with }}
 
