--- a/client/marketplace/products/view/view.html
+++ b/client/marketplace/products/view/view.html
@@ -7,6 +7,7 @@
 
         {{> marketplaceProductsViewImages }}
         {{> marketplaceProductsViewDetails }}
+        {{> marketplaceProductsViewReviews }}
         {{> marketplaceProductsViewOther }}
 
         {{ /with }}
