--- a/client/marketplace/shops/view/view.html
+++ b/client/marketplace/shops/view/view.html
@@ -6,8 +6,7 @@
         {{ #with shop }}
 
         {{> marketplaceShopsViewImages }}
-
-        {{ title }}
+        {{> marketplaceShopsViewDetails }}
 
         {{ /with }}
     </div>
