--- a/client/marketplace/shops/view/view.html
+++ b/client/marketplace/shops/view/view.html
@@ -7,6 +7,7 @@
 
         {{> marketplaceShopsViewImages }}
         {{> marketplaceShopsViewDetails }}
+        {{> marketplaceShopsViewReviews }}
 
         {{ /with }}
     </div>
