--- a/client/marketplace/shops/view/view.html
+++ b/client/marketplace/shops/view/view.html
@@ -8,6 +8,7 @@
         {{> marketplaceShopsViewImages }}
         {{> marketplaceShopsViewDetails }}
         {{> marketplaceShopsViewReviews }}
+        {{> marketplaceShopsViewProducts }}
 
         {{ /with }}
     </div>
