--- a/client/marketplace/products/view/details/details.html
+++ b/client/marketplace/products/view/details/details.html
@@ -2,9 +2,10 @@
     <div class="details">
         <div class="container">
             <h1>{{ title }}</h1>
-            <span>{{ price }}</span>
+            <span>{{ currency price }}</span>
             <span>{{ availability }}</span>
             <p>{{ description }}</p>
+            <button class="btn btn-default btn-block buyBtn">Buy</button>
         </div>
     </div>
 </template>
