--- a/client/layouts/internal.html
+++ b/client/layouts/internal.html
@@ -27,7 +27,7 @@
         {{ /each }}
         <div class="total">
             {{total}}
-            <button class="btn btn-default purchaseBtn">Purchase</button>
+            <button class="btn btn-default purchaseBtn" data-generating-text="Generating order...">Purchase</button>
         </div>
     </div>
     {{ /if }}
