--- a/client/marketplace/orders/view/items/items.html
+++ b/client/marketplace/orders/view/items/items.html
@@ -1,7 +1,7 @@
 <template name="ordersViewItems">
-    <div class="items">
+    <div class="items block">
         <div class="container">
-            <h2>Items</h2>
+            <h2 class="page-header">Items</h2>
             {{ _id }}
         </div>
     </div>
