--- a/client/marketplace/orders/view/items/items.html
+++ b/client/marketplace/orders/view/items/items.html
@@ -2,7 +2,19 @@
     <div class="items block">
         <div class="container">
             <h2 class="page-header">Items</h2>
-            {{ _id }}
+            {{ #each items }}
+            {{ currency itemPrice }}
+            {{ #with product }}
+                {{ #if image }}
+                <div class="image">
+                    <img src="{{ image.url }}" />
+                </div>
+                {{ /if }}
+                {{ title }}
+                {{ subtitle }}
+            {{ /with }}
+            {{ itemCount }}
+            {{ /each }}
         </div>
     </div>
 </template>
