--- a/client/marketplace/orders/view/items/items.less
+++ b/client/marketplace/orders/view/items/items.less
@@ -2,17 +2,23 @@
 
 .orders-view {
   .items {
-    .image {
-      height: 75px;
-      width: 75px;
-      background: transparent;
-      border: 1px solid @brand-primary;
-      padding: 1px;
+    .item {
+      .image {
+        height: 75px;
+        width: 75px;
+        background: transparent;
+        border: 1px solid @brand-primary;
+        padding: 1px;
 
-      img {
-        height: 100%;
-        width: 100%;
+        img {
+          height: 100%;
+          width: 100%;
+          background: white;
+        }
       }
+    }
+    .total {
+
     }
   }
 }
