--- a/client/marketplace/orders/view/items/items.html
+++ b/client/marketplace/orders/view/items/items.html
@@ -3,18 +3,33 @@
         <div class="container">
             <h2 class="page-header">Items</h2>
             {{ #each items }}
-            {{ currency itemPrice }}
-            {{ #with product }}
-                {{ #if image }}
-                <div class="image">
-                    <img src="{{ image.url }}" />
+                <div class="item">
+                    {{ #with product }}
+                        {{ #if image }}
+                        <div class="image">
+                            <img src="{{ image.url }}" />
+                        </div>
+                        {{ /if }}
+                        {{ title }}
+                        {{ subtitle }}
+                    {{ /with }}
+                    {{ currency itemPrice }}
+                    {{ currency itemShipping }}
+                    {{ itemCount }}
                 </div>
-                {{ /if }}
-                {{ title }}
-                {{ subtitle }}
-            {{ /with }}
-            {{ itemCount }}
             {{ /each }}
+            <div class="total">
+                Subtotal: {{ currency subtotal }}
+            </div>
+            <div class="total">
+                Shipping: {{ currency totalShipping }}
+            </div>
+            <div class="total">
+                Tax: {{ currency totalTax }}
+            </div>
+            <div class="total">
+                Total: {{ currency total }}
+            </div>
         </div>
     </div>
 </template>
