--- a/client/marketplace/orders/view/details/details.less
+++ b/client/marketplace/orders/view/details/details.less
@@ -9,6 +9,7 @@
       border: 1px solid @brand-primary;
       border-radius: 100%;
       padding: 1px;
+      display: block;
 
       img {
         border-radius: 100%;
