--- a/client/marketplace/orders/view/items/items.less
+++ b/client/marketplace/orders/view/items/items.less
@@ -26,8 +26,7 @@
       }
 
       > .count, > .price{
-        height: 60px;
-        line-height: 60px;
+        line-height: 1;
         text-align: center;
         font-size: 24px;
         font-weight: 300;
