--- a/client/marketplace/orders/view/details/details.html
+++ b/client/marketplace/orders/view/details/details.html
@@ -16,6 +16,7 @@
                     <a href="{{pathFor route='shops.view' data=this }}">{{ title }}</a>
                 {{ /with }}
             </i>
+            <button class="btn btn-primary btn-block payWithPayPalBtn" data-generating-text="Generating invoice..." data-redirecting-text="Redirecting to PayPal...">Pay with PayPal</button>
         </div>
     </div>
 </template>
