--- a/client/marketplace/products/view/details/details.html
+++ b/client/marketplace/products/view/details/details.html
@@ -5,7 +5,7 @@
             <span>{{ currency price }}</span>
             <span>{{ availability }}</span>
             <p>{{ description }}</p>
-            <button class="btn btn-default btn-block buyBtn">Buy</button>
+            <button class="btn btn-default btn-block buyBtn">{{_ "marketplace.products.view.details.buyBtn.text"}}</button>
         </div>
     </div>
 </template>
