--- a/client/marketplace/products/view/reviews/reviews.html
+++ b/client/marketplace/products/view/reviews/reviews.html
@@ -1,8 +1,8 @@
 <template name="marketplaceProductsViewReviews">
     <div class="reviews">
         <div class="container">
-            <h2>Reviews</h2>
-            reviews block
+            <h2>{{_ "marketplace.products.view.reviews.header"}}</h2>
+            Reviews
         </div>
     </div>
 </template>
