--- a/client/marketplace/shops/view/products/products.html
+++ b/client/marketplace/shops/view/products/products.html
@@ -1,7 +1,7 @@
 <template name="marketplaceShopsViewProducts">
     <div class="products">
         <div class="container">
-            <h2>Products</h2>
+            <h2>{{_ "marketplace.shops.view.products.header"}}</h2>
             <div class="row">
                 {{ #each products }}
                     <div class="col-xs-6 col-sm-4">
@@ -14,14 +14,14 @@
                                     {{ #if title }}
                                         {{title}}
                                     {{ else }}
-                                        <i>Draft product</i>
+                                        <i>{{_ "marketplace.shops.view.products.title.none"}}</i>
                                     {{ /if }}
                                 </h3>
                                 <span class="price">
                                     {{ #if price }}
                                         {{price}}
                                     {{ else }}
-                                        <i>No price specified</i>
+                                        <i>{{_ "marketplace.shops.view.products.price.none"}}</i>
                                     {{ /if }}
                                 </span>
                             </div>
