--- a/client/marketplace/marketplace.less
+++ b/client/marketplace/marketplace.less
@@ -1,8 +1,5 @@
+@import (reference) '../lib/variables.import.less';
+
 .marketplace {
-
-  .menuBtn {
-    position: absolute;
-    z-index: 10;
-  }
-
+  margin-top: 48px + @grid-gutter-width / 2;
 }
