--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -1,5 +1,5 @@
 <template name="mainMenu">
-    <div id="mainMenu" class="visible">
+    <div id="mainMenu">
         <div class="overlay"></div>
         <div class="menu">
             <div class="header">
