--- a/client/layouts/menu/menu.less
+++ b/client/layouts/menu/menu.less
@@ -28,7 +28,7 @@
 
     .header {
       height: 48px;
-      margin: 0 0 @grid-gutter-width 0;
+      margin: 0;
 
       .icon-logo {
         float: left;
@@ -61,63 +61,72 @@
       }
     }
 
-    .divider {
-      height: 0;
-      border-top: 1px dotted @brand-primary;
-      text-align: center;
-      margin: @grid-gutter-width @grid-gutter-width / 2 @grid-gutter-width / 2 @grid-gutter-width / 2;
-      h6 {
-        margin: 0 auto;
-        background: @body-bg;
-        display: inline-block;
-        padding: 0 5px;
-        height: 20px;
-        line-height: 20px;
-        top: -10px;
-        position: relative;
+    .menus {
+      position: absolute;
+      top: 48px;
+      bottom: 130px;
+      width: 100%;
+      overflow-x: hidden;
+      overflow-y: auto;
+
+      .divider {
+        height: 0;
+        border-top: 1px dotted @brand-primary;
+        text-align: center;
+        margin: @grid-gutter-width @grid-gutter-width / 2 @grid-gutter-width / 2 @grid-gutter-width / 2;
+        h6 {
+          margin: 0 auto;
+          background: @body-bg;
+          display: inline-block;
+          padding: 0 5px;
+          height: 20px;
+          line-height: 20px;
+          top: -10px;
+          position: relative;
+        }
       }
-    }
 
-    .createShopBtn {
-      .icon-add {
-        @icon-size: 24px;
+      .createShopBtn {
+        .icon-add {
+          @icon-size: 24px;
 
-        vertical-align: middle;
-        line-height: @line-height-computed;
-        margin-top: (@line-height-computed - @icon-size)/2;
-        margin-bottom: (@line-height-computed - @icon-size)/2;
-        margin-right: 5px;
-        display: block;
-        float: left;
-        height: @icon-size;
-        width: @icon-size;
-      }
-    }
-
-    .shop {
-      .logo {
-        @icon-size: 24px;
-
-        height: @icon-size;
-        width: @icon-size;
-        display: block;
-        float: left;
-        margin-right: 5px;
-        margin-top: (@line-height-computed - @icon-size)/2;
-        margin-bottom: (@line-height-computed - @icon-size)/2;
-        vertical-align: middle;
-        line-height: @line-height-computed;
-
-        border: 1px solid @brand-primary;
-        border-radius: 100%;
-        padding: 1px;
-
-        img {
-          height: 100%;
-          width: 100%;
-          border-radius: 100%;
-          background: @brand-primary;
+          vertical-align: middle;
+          line-height: @line-height-computed;
+          margin-top: (@line-height-computed - @icon-size)/2;
+          margin-bottom: (@line-height-computed - @icon-size)/2;
+          margin-right: 5px;
           display: block;
+          float: left;
+          height: @icon-size;
+          width: @icon-size;
+        }
+      }
+
+      .shop {
+        .logo {
+          @icon-size: 24px;
+
+          height: @icon-size;
+          width: @icon-size;
+          display: block;
+          float: left;
+          margin-right: 5px;
+          margin-top: (@line-height-computed - @icon-size)/2;
+          margin-bottom: (@line-height-computed - @icon-size)/2;
+          vertical-align: middle;
+          line-height: @line-height-computed;
+
+          border: 1px solid @brand-primary;
+          border-radius: 100%;
+          padding: 1px;
+
+          img {
+            height: 100%;
+            width: 100%;
+            border-radius: 100%;
+            background: none;
+            display: block;
+          }
         }
       }
     }
@@ -126,12 +135,12 @@
       background: @brand-primary;
       position: absolute;
       width: 100%;
+      height: 130px;
       bottom: 0;
       padding: @grid-gutter-width @grid-gutter-width / 2;
     }
 
     .profile {
-      height: 130px;
 
       .avatar {
         height: 70px;
