--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -64,12 +64,12 @@
                 </div>
                 <ul class="nav nav-pills nav-stacked">
                     <li>
-                        <a href="">
+                        <a href="{{pathFor route='policy'}}">
                             Privacy policy
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="{{pathFor route='terms'}}">
                             Terms of service
                         </a>
                     </li>
