--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -23,11 +23,14 @@
                             Marketplace
                         </a>
                     </li>
+                    {{ #if ordersCount }}
                     <li>
                         <a href="{{pathFor route='orders'}}">
                             Orders
+                            <span class="badge pull-right">{{ ordersCount}}</span>
                         </a>
                     </li>
+                    {{ /if }}
                 </ul>
                 <div class="divider">
                     <h6>
@@ -51,9 +54,8 @@
                     {{ /each }}
                     <li>
                         <a href="#" class="createShopBtn">
-
                             {{> iconAdd}}
-                            Add new shop
+                            Create my own shop
                         </a>
                     </li>
                 </ul>
