--- a/client/layouts/menu/menu.less
+++ b/client/layouts/menu/menu.less
@@ -23,7 +23,8 @@
   }
 
   .menu {
-    width: @main-menu-width;
+    width: 100%;
+    max-width: @main-menu-width;
     background: @body-bg;
 
     .header {
@@ -44,13 +45,15 @@
       .brand {
         color: @brand-primary;
         height: 48px;
-        width: @main-menu-width - 48px * 2;
         margin: 0 48px;
         padding: 0 @grid-gutter-width / 2;
         line-height: 48px;
         font-size: 28px;
         font-weight: 300;
         text-align: center;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       .closeBtn {
@@ -83,6 +86,14 @@
           line-height: 20px;
           top: -10px;
           position: relative;
+        }
+      }
+
+      .nav {
+        a {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
       }
 
