--- a/client/layouts/menu/menu.less
+++ b/client/layouts/menu/menu.less
@@ -74,7 +74,7 @@
 
       .divider {
         height: 0;
-        border-top: 1px dotted @brand-primary;
+        border-top: 1px dotted @text-color;
         text-align: center;
         margin: @grid-gutter-width @grid-gutter-width / 2 @grid-gutter-width / 2 @grid-gutter-width / 2;
         h6 {
@@ -86,6 +86,7 @@
           line-height: 20px;
           top: -10px;
           position: relative;
+          color: @text-color;
         }
       }
 
